add cell size input

--- a/life.html
+++ b/life.html
@@ -24,9 +24,14 @@
             </canvas>
             <br><br>
             <div id="inputContainer" class="center">
+                <h2 class="center">Settings</h2>
+                <br>
                 <div class="center">
                     <label for="speedInput">Cycles per Second</label>
                     <input id="speedInput" name="speedInput" type="number" min="1" max="200" value="10">
+                    <br><br>
+                    <label for="cellSizeInput">Cell Size</label>
+                    <input id="cellSizeInput" name="cellSizeInput" type="number" min="1" max="100" value="10">
                 </div>
                 <br>
                 <div class="center">
