remove navbar class

--- a/navbar.html
+++ b/navbar.html
@@ -1,21 +1,26 @@
 <link rel="stylesheet" type="text/css" href="general.css">
 <link rel="stylesheet" type="text/css" href="navbar.css">
-<div id="navbar" class="navbar">
-    <div class="navbar">
-        <ul id="navbuttonList" class="navbar navbuttons-container">
-            <li class="navbar navbutton-container">
+<div id="navbar">
+    <div id="largeNavbar">
+        <ul id="navbuttonList" class="navbuttons-container">
+            <li class="navbutton-container">
                 <a href="index.html" target="_parent">
                     <button class="navbutton">Home</button>
                 </a>
             </li>
-            <li class="navbar navbutton-container">
+            <li class="navbutton-container">
                 <a href="minesweeper.html" target="_parent">
                     <button class="navbutton">Minesweeper</button>
                 </a>
             </li>
-            <li class="navbar navbutton-container">
+            <li class="navbutton-container">
                 <a href="snake.html" target="_parent">
                     <button class="navbutton">Snake</button>
+                </a>
+            </li>
+            <li class="navbutton-container">
+                <a href="life.html" target="_parent">
+                    <button class="navbutton">Conway's GoL</button>
                 </a>
             </li>
         </ul>
