--- a/snake.html
+++ b/snake.html
@@ -11,7 +11,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: white;
+            background: rgba(192, 192, 192, 0.907);
         }
 
         canvas {
