--- a/snake.html
+++ b/snake.html
@@ -5,42 +5,60 @@
         <style>
         html, body {
             margin: 0;
+            background: rgb(192, 192, 192);
         }
 
         #gameContainer {
             display: flex;
             align-items: center;
-            justify-content: center;
-            background: rgba(192, 192, 192, 0.907);
         }
 
         canvas {
-            border: 5px solid white;
             background: black;
         }
         </style>
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+        <script src="snakePopups.js"></script>
     </head>
     <body onload="loop()">
-        <div id="navbarContainer">
-            
-        </div>
+        <div id="navbarContainer"></div>
         <br>
-        <h1 class="center">Snake</h1>
+            <h1 class="center">Snake</h1>
         <br>
+
+
         <div id="gameContainer">
-            <canvas style="position: relative; left: 100px;" width="400" height="400" id="Snake"></canvas>
-            <h2 style="position: relative; top: 220px; right: 305px;">Score:  <span id="snakeScore"></span></h2>
-            <p style="position: relative; top: 250px;right: 370px;">P: play and pause</p>
-            <button style="position: relative; top: 220px; right: 275px; height: 20px; width: 60;" onClick="environment.difficulty = 0;">Easy</button>
-            <button style="position: relative; top: 220px; right: 270px; height: 20px; width: 60;" onClick="environment.difficulty = 1;">Normal</button>
-            <button style="position: relative; top: 220px; right: 265px; height: 20px; width: 60;" onClick="environment.difficulty = 2;">Hard</button>
+            <canvas style="position: relative; top: 30px; left: 500px;" width="400" height="400" id="Snake"></canvas>
+            <h2 style="position: relative; bottom: 240px; left: 100px;">Score: <span id="snakeScore"></span></h2>
+
+            <button onclick="openHowToPlay()" style="position: relative; bottom: 200px; left: 35px; width: 110px; height: 45px;">How to Play</button>
+            <button onclick="openSettings()" style="position: relative; bottom: 200px; left: 45px; width: 110px; height: 45px;">Settings</button>
+        </div>
+        <div id="howToPlayMessage" style="position: absolute; top: 560px; left: 500px; width: 400px; display: none;">
+            The game begins on a black screen. 
+            Press 'p' when you are ready to start. During the game, 'p' can be used to freely pause and resume the game. 
+            Once started, the green snake will appear in the center of the black canvas. 
+            You can use the four arrow keys to change the direction of the snake. 
+            The snake will move constantly without input.
+        </div>
+        <div id="howToPlayClose" style="display: none;">
+            <button id="howToPlayClose" onclick="closeHowToPlay()" style="position: relative; top: 170px; left: 500px; width: 110px; height: 45px;">Close</button>
+        </div>
+
+        <div id="settingsMessage" style="position: absolute; top: 560px; left: 500px; width: 400px; display: none;">
+            Difficulty select:
+            <button style="position: relative; top: 40px; right: 110px; width: 65px; height: 30px;" onClick="environment.difficulty = 0;">Easy</button>
+            <button style="position: relative; top: 40px; right: 100px; width: 65px; height: 30px;" onClick="environment.difficulty = 1;">Normal</button>
+            <button style="position: relative; top: 40px; right: 90px; width: 65px; height: 30px;" onClick="environment.difficulty = 2;">Hard</button>
+        </div>
+        <div id="settingsClose" style="display: none;">
+            <button id="settingsClose" onclick="closeSettings()" style="position: relative; top: 140px; left: 500px; width: 110px; height: 45px;">Close</button>
         </div>
     </body>
     <script src="snake.js"></script>
     <script>
         $("#navbarContainer").load("navbar.html");
+        
     </script>
 </html>
