make stuff look good in firefox

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Home</title>
 
     <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="clickable.css">
 </head>
 
 <body>
