--- a/life.html
+++ b/life.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Conway's Game of Life</title>
 
     <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
@@ -10,6 +11,7 @@
     <script src="logger.js"></script>
     <script src="grid.js"></script>
     <script src="life.js"></script>
+    <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="clickable.css">
     <link rel="stylesheet" href="life.css">
 </head>
