--- a/snake.html
+++ b/snake.html
@@ -20,6 +20,7 @@
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="snakePopups.js"></script>
+        <link rel="stylesheet" href="general.css">
     </head>
     <body onload="loop()">
         <div id="navbarContainer"></div>
@@ -59,6 +60,5 @@
     <script src="snake.js"></script>
     <script>
         $("#navbarContainer").load("navbar.html");
-        
     </script>
 </html>
