--- a/minesweeper.html
+++ b/minesweeper.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Minesweeper</title>
 
     <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
@@ -15,6 +16,7 @@
     <script src="minesweeperPopups.js"></script>
     <script src="minesweeperGame.js"></script>
     <script src="minesweeperSolver.js"></script>
+    <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="clickable.css">
     <link rel="stylesheet" href="minesweeper.css">
 </head>
