--- a/template.html
+++ b/template.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Welcome</title>
 
-        <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    </head>
-    <body>
-        <div id="navbarContainer"></div>
-        <h1>Template Title</h1>
-        <p>Template Text</p>
-    </body>
-    <script>
-        $("#navbarContainer").load("navbar.html");
-        console.log("Hello World!");
-    </script>
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome</title>
+
+    <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="clickable.css">
+</head>
+
+<body>
+    <div id="navbarContainer"></div>
+    <h1>Template Title</h1>
+    <p>Template Text</p>
+</body>
+<script>
+    $("#navbarContainer").load("navbar.html");
+    console.log("Hello World!");
+</script>
+
 </html>
