--- a/snake.html
+++ b/snake.html
@@ -25,36 +25,46 @@
     <body onload="loop()">
         <div id="navbarContainer"></div>
         <br>
-            <h1 class="center">Snake</h1>
+        <h1 class="center">Snake</h1>
         <br>
 
 
-        <div id="gameContainer">
-            <canvas style="position: relative; top: 30px; left: 500px;" width="400" height="400" id="Snake"></canvas>
-            <h2 style="position: relative; bottom: 240px; left: 100px;">Score: <span id="snakeScore"></span></h2>
+        <div id="scoreContainer" class="center">
+            <h2>Score: <span id="snakeScore">0</span></h2>
+        </div>
+        <br>
+        <div id="gameContainer" class="center">
+            <canvas width="400" height="400" id="Snake"></canvas>
+        </div>
+        <br><br>
+        <div class="center">
+            <button onclick="openHowToPlay()" style="width: 110px; height: 45px;">How to Play</button>
+            <button onclick="openSettings()" style="width: 110px; height: 45px;">Settings</button>
+        </div>
+        <br>
+        <div id="howToPlayContainer" class="center">
+            <div id="howToPlayMessage" style="width: 400px; display: none;">
+                The game begins on a black screen. 
+                Press 'p' when you are ready to start. During the game, 'p' can be used to freely pause and resume the game. 
+                Once started, the green snake will appear in the center of the black canvas. 
+                You can use the four arrow keys to change the direction of the snake. 
+                The snake will move constantly without input.
+            </div>
+            <div id="howToPlayClose" class="center" style="display: none;">
+                <button id="howToPlayClose" onclick="closeHowToPlay()" style="width: 110px; height: 45px;">Close</button>
+            </div>
+        </div>
 
-            <button onclick="openHowToPlay()" style="position: relative; bottom: 200px; left: 35px; width: 110px; height: 45px;">How to Play</button>
-            <button onclick="openSettings()" style="position: relative; bottom: 200px; left: 45px; width: 110px; height: 45px;">Settings</button>
-        </div>
-        <div id="howToPlayMessage" style="position: absolute; top: 560px; left: 500px; width: 400px; display: none;">
-            The game begins on a black screen. 
-            Press 'p' when you are ready to start. During the game, 'p' can be used to freely pause and resume the game. 
-            Once started, the green snake will appear in the center of the black canvas. 
-            You can use the four arrow keys to change the direction of the snake. 
-            The snake will move constantly without input.
-        </div>
-        <div id="howToPlayClose" style="display: none;">
-            <button id="howToPlayClose" onclick="closeHowToPlay()" style="position: relative; top: 170px; left: 500px; width: 110px; height: 45px;">Close</button>
-        </div>
-
-        <div id="settingsMessage" style="position: absolute; top: 560px; left: 500px; width: 400px; display: none;">
-            Difficulty select:
-            <button style="position: relative; top: 40px; right: 110px; width: 65px; height: 30px;" onClick="environment.difficulty = 0;">Easy</button>
-            <button style="position: relative; top: 40px; right: 100px; width: 65px; height: 30px;" onClick="environment.difficulty = 1;">Normal</button>
-            <button style="position: relative; top: 40px; right: 90px; width: 65px; height: 30px;" onClick="environment.difficulty = 2;">Hard</button>
-        </div>
-        <div id="settingsClose" style="display: none;">
-            <button id="settingsClose" onclick="closeSettings()" style="position: relative; top: 140px; left: 500px; width: 110px; height: 45px;">Close</button>
+        <div id="settingsContainer" class="center">
+            <div id="settingsMessage" style="width: 400px; display: none;">
+                Difficulty select:
+                <button style="width: 65px; height: 30px;" onClick="environment.difficulty = 0;">Easy</button>
+                <button style="width: 65px; height: 30px;" onClick="environment.difficulty = 1;">Normal</button>
+                <button style="width: 65px; height: 30px;" onClick="environment.difficulty = 2;">Hard</button>
+            </div>
+            <div id="settingsClose" class="center" style="display: none;">
+                <button id="settingsClose" onclick="closeSettings()" style="width: 110px; height: 45px;">Close</button>
+            </div>
         </div>
     </body>
     <script src="snake.js"></script>
