--- a/navbar.html
+++ b/navbar.html
@@ -1,30 +1,28 @@
 <link rel="stylesheet" type="text/css" href="navbar.css">
 <div id="navbar">
-    <div id="largeNavbar">
-        <ul id="navbuttonList" class="navbuttons-container">
-            <li class="navbutton-container">
-                <a href="index.html" target="_parent">
-                    <button class="navbutton">Home</button>
-                </a>
-            </li>
-            <li class="navbutton-container">
-                <a href="minesweeper.html" target="_parent">
-                    <button class="navbutton">Minesweeper</button>
-                </a>
-            </li>
-            <li class="navbutton-container">
-                <a href="snake.html" target="_parent">
-                    <button class="navbutton">Snake</button>
-                </a>
-            </li>
-            <li class="navbutton-container">
-                <a href="life.html" target="_parent">
-                    <button class="navbutton">Conway's GoL</button>
-                </a>
-            </li>
-        </ul>
+    <div id="navbuttonList" class="navbuttons-container">
+        <div class="navbutton-container">
+            <button class="navbutton">
+                <a href="index.html" target="_parent">Home</a>
+            </button>
+        </div>
+        <div class="navbutton-container">
+            <button class="navbutton">
+                <a href="minesweeper.html" target="_parent">Minesweeper</a>
+            </button>
+        </div>
+        <div class="navbutton-container">
+            <button class="navbutton">
+                <a href="snake.html" target="_parent">Snake</a>
+            </button>
+        </div>
+        <div class="navbutton-container">
+            <button class="navbutton">
+                <a href="life.html" target="_parent">Conway's GoL</a>
+            </button>
+        </div>
     </div>
-    <div id="menuIconContainer" class="navbutton" onclick="toggleNavDropdown()">
+    <div id="menuIconContainer" onclick="toggleNavDropdown()">
         <div class="iconTopBar"></div>
         <div class="iconMiddleBar"></div>
         <div class="iconBottomBar"></div>
@@ -33,5 +31,6 @@
 <script>
     function toggleNavDropdown() {
         document.getElementById("navbuttonList").classList.toggle("active");
+        document.getElementById("menuIconContainer").classList.toggle("change");
     }
 </script>
