make entire button link

--- a/navbar.html
+++ b/navbar.html
@@ -2,24 +2,24 @@
 <div id="navbar">
     <div id="navbuttonList" class="navbuttons-container">
         <div class="navbutton-container">
-            <button class="navbutton">
-                <a href="index.html" target="_parent">Home</a>
-            </button>
+            <a href="index.html" target="_parent">
+                <button class="navbutton">Home</button>
+            </a>
         </div>
         <div class="navbutton-container">
-            <button class="navbutton">
-                <a href="minesweeper.html" target="_parent">Minesweeper</a>
-            </button>
+            <a href="minesweeper.html" target="_parent">
+                <button class="navbutton">Minesweeper</button>
+            </a>
         </div>
         <div class="navbutton-container">
-            <button class="navbutton">
-                <a href="snake.html" target="_parent">Snake</a>
-            </button>
+            <a href="snake.html" target="_parent">
+                <button class="navbutton">Snake</button>
+            </a>
         </div>
         <div class="navbutton-container">
-            <button class="navbutton">
-                <a href="life.html" target="_parent">Conway's GoL</a>
-            </button>
+            <a href="life.html" target="_parent">
+                <button class="navbutton">Conway's GoL</button>
+            </a>
         </div>
     </div>
     <div id="menuIconContainer" onclick="toggleNavDropdown()">
