add message to homepage

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
                 <p>Quadratic Solver</p>
             </li>
         </ul>
+        <br>
+        <p>This page is mostly a placeholder for our home page. Once we've finished some games and other cool stuff,
+            we'll spruce this up a bit.</p>
     </div>
 </body>
 <script>
     $("#navbarContainer").load("navbar.html");
-    console.log("Hello World!");
 </script>
 
 </html>
