add pattern constants

--- a/life.html
+++ b/life.html
@@ -44,7 +44,7 @@
 
             </canvas>
             <div class="clickableContainer">
-                <button id="createGlider" class="clickable" onclick="createFollower('glider');">Glider</button>
+                <button id="createGlider" class="clickable" onclick="createFollower(GLIDER);">Glider</button>
             </div>
         </div>
     </div>
