rename handleMouseMove to trackMouse, use mouse pos relative to entire page

--- a/life.html
+++ b/life.html
@@ -80,7 +80,7 @@
     newGame(game);
 
     window.onclick = handleClick;
-    document.getElementById("pageContainer").onmousemove = handleMouseMove;
+    document.getElementById("pageContainer").onmousemove = trackMouse;
     generatePatternButtons();
 </script>
 
