--- a/life.html
+++ b/life.html
@@ -43,19 +43,27 @@
             <canvas id="lifeCanvas">
 
             </canvas>
-            <div id="patternClickableContainer">
-                <div id="stillPatternContainer" class="clickableContainer patternContainer center">
-                    <h2>Still Patterns</h2>
+            <div>
+                <br>
+                <p id="patternInfo" class="center">Current Pattern: <span id="currentPattern">Cell</span></p>
+                <div id="currentPatternContainer" class="clickableContainer center">
+                    <button class="clickable" onclick="deleteAnyFollowers();">Reset Pattern</button>
                 </div>
                 <br>
-                <div id="oscillatingPatternContainer" class="clickableContainer patternContainer center">
-                    <h2>Oscillating Patterns</h2>
+                <div id="patternClickableContainer">
+                    <div id="stillPatternContainer" class="clickableContainer patternContainer center">
+                        <h2>Still Patterns</h2>
+                    </div>
+                    <br>
+                    <div id="oscillatingPatternContainer" class="clickableContainer patternContainer center">
+                        <h2>Oscillating Patterns</h2>
+                    </div>
+                    <br>
+                    <div id="spaceshipPatternContainer" class="clickableContainer patternContainer center">
+                        <h2>Spaceship (Moving) Patterns</h2>
+                    </div>
+                    <br><br>
                 </div>
-                <br>
-                <div id="spaceshipPatternContainer" class="clickableContainer patternContainer center">
-                    <h2>Spaceship (Moving) Patterns</h2>
-                </div>
-                <br><br>
             </div>
         </div>
     </div>
