add misc patterns, set max cell size to 20 to make sure preview patterns work

--- a/life.html
+++ b/life.html
@@ -30,7 +30,7 @@
                     <input id="speedInput" name="speedInput" type="number" min="1" max="200" value="10">
                     <br><br>
                     <label for="cellSizeInput">Cell Size</label>
-                    <input id="cellSizeInput" name="cellSizeInput" type="number" min="1" max="100" value="10">
+                    <input id="cellSizeInput" name="cellSizeInput" type="number" min="1" max="20" value="10">
                 </div>
                 <br>
                 <div class="center">
@@ -61,6 +61,10 @@
                     <br>
                     <div id="spaceshipPatternContainer" class="clickableContainer patternContainer center">
                         <h2>Spaceship (Moving) Patterns</h2>
+                    </div>
+                    <br>
+                    <div id="miscPatternContainer" class="clickableContainer patternContainer center">
+                        <h2>Miscellaneous Patterns</h2>
                     </div>
                     <br><br>
                 </div>
