make sure GoL Title element stays centered when zooming

--- a/life.html
+++ b/life.html
@@ -20,9 +20,9 @@
 
 <body>
     <div id="navbarContainer"></div>
-    <div id="pageContainer">
+    <div id="pageContainer" class="center">
         <h1 class="textCenter">John Conway's Game of Life</h1>
-        <div id="gameContainer" class="center">
+        <div id="gameContainer">
             <br>
             <div id="inputContainer" class="center">
                 <div class="center">
