change clickable-container to class

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -27,7 +27,7 @@
         <h1 class="textCenter">Minesweeper</h1>
         <p class="center">Make sure you check out Settings to see what you can change!</p>
         <br>
-        <div id="clickableContainer" class="button-container container">
+        <div class="clickable-container container">
             <button id="howToButton" class="clickable" onclick="openHowToPlay();">How To Play</button>
             <button id="settingButton" class="clickable" onclick="openSettings();">Settings</button>
             <button id="newGameButton" class="clickable" onclick="startGame(game);">New Game</button>
