--- a/life.html
+++ b/life.html
@@ -47,24 +47,24 @@
             <div>
                 <br>
                 <p id="patternInfo" class="center">Current Pattern: <span id="currentPattern">Cell</span></p>
-                <div id="currentPatternContainer" class="clickableContainer center">
+                <div id="currentPatternContainer" class="clickable-container center">
                     <button class="clickable" onclick="deleteAnyFollowers();">Reset Pattern</button>
                 </div>
                 <br>
                 <div id="patternClickableContainer">
-                    <div id="stillPatternContainer" class="clickableContainer patternContainer center">
+                    <div id="stillPatternContainer" class="clickable-container patternContainer center">
                         <h2>Still Patterns</h2>
                     </div>
                     <br>
-                    <div id="oscillatingPatternContainer" class="clickableContainer patternContainer center">
+                    <div id="oscillatingPatternContainer" class="clickable-container patternContainer center">
                         <h2>Oscillating Patterns</h2>
                     </div>
                     <br>
-                    <div id="spaceshipPatternContainer" class="clickableContainer patternContainer center">
+                    <div id="spaceshipPatternContainer" class="clickable-container patternContainer center">
                         <h2>Spaceship (Moving) Patterns</h2>
                     </div>
                     <br>
-                    <div id="miscPatternContainer" class="clickableContainer patternContainer center">
+                    <div id="miscPatternContainer" class="clickable-container patternContainer center">
                         <h2>Miscellaneous Patterns</h2>
                     </div>
                     <br><br>
