remove default difficulty values from html since they don't do anything

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -222,13 +222,13 @@
                 <button class="clickable" onclick="prefillDifficulty('EXPERT');">Expert</button>
                 <br><br>
                 <label for="rowCount">Number of Rows:</label>
-                <input id="rowCount" name="rowCount" type="number" required value="16">
+                <input id="rowCount" name="rowCount" type="number" required>
                 <br><br>
                 <label for="colCount">Number of Columns:</label>
-                <input id="colCount" name="colCount" type="number" required value="30">
+                <input id="colCount" name="colCount" type="number" required>
                 <br><br>
                 <label for="mineCount">Number of Mines</label>
-                <input id="mineCount" name="mineCount" type="number" required value="99">
+                <input id="mineCount" name="mineCount" type="number" required>
             </div>
 
             <br><br>
