--- a/minesweeper.html
+++ b/minesweeper.html
@@ -11,6 +11,7 @@
     <script src="logger.js"></script>
     <script src="setUtils.js"></script>
     <script src="deque.js"></script>
+    <script src="collapsible.js"></script>
     <script src="grid.js"></script>
     <script src="minesweeperUtil.js"></script>
     <script src="minesweeperPopups.js"></script>
@@ -18,6 +19,7 @@
     <script src="minesweeperSolver.js"></script>
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="clickable.css">
+    <link rel="stylesheet" href="collapsible.css">
     <link rel="stylesheet" href="minesweeper.css">
 </head>
 
