add clicker game files

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
             </li>
             <li>
+                <p><a href="clicker.html">Semi-Mindless Clicker Game</a></p>
+            </li>
+            <li>
                 <p>Breakout</p>
             </li>
             <li>
