change textCenter to text-center

--- a/life.html
+++ b/life.html
@@ -23,7 +23,7 @@
 <body>
     <div id="navbarContainer"></div>
     <div id="pageContainer" class="center">
-        <h1 class="textCenter">John Conway's Game of Life</h1>
+        <h1 class="text-center">John Conway's Game of Life</h1>
         <div id="gameContainer">
             <br>
             <div id="inputContainer" class="center">
