--- a/minesweeper.html
+++ b/minesweeper.html
@@ -26,7 +26,7 @@
 <body id="body">
     <div id="navbarContainer"></div>
     <div id="pageContainer">
-        <h1 class="textCenter">Minesweeper</h1>
+        <h1 class="text-center">Minesweeper</h1>
         <p class="center">Make sure you check out Settings to see what you can change!</p>
         <br>
         <div id="leftToolbar">
@@ -41,7 +41,7 @@
             <button id="settingButton" class="clickable" onclick="solve(false);">Auto Solve</button>
             <button id="hintButton" class="clickable" onclick="solve(true);">Hint</button>
         </div>
-        <div id="gameContainer" class="center textCenter">
+        <div id="gameContainer" class="center text-center">
             <div id="scoreContainer" class="clearfix">
                 <div id="minesBoard" class="scoreboard">000</div>
                 <div id="timeBoard" class="scoreboard">000</div>
