use new pageTitle id

--- a/clicker.html
+++ b/clicker.html
@@ -18,7 +18,7 @@
 <body>
     <div id="navbarContainer"></div>
 
-    <h2>A Semi-Mindless Clicker Game</h2>
+    <h1 id="pageTitle">A Semi-Mindless Clicker Game</h1>
     <div id="gameContainer" class="center">
 
     </div>
