--- a/minesweeper.html
+++ b/minesweeper.html
@@ -26,7 +26,7 @@
 <body id="body">
     <div id="navbarContainer"></div>
     <div id="pageContainer">
-        <h1 class="text-center">Minesweeper</h1>
+        <h1 id="pageTitle">Minesweeper</h1>
         <p class="center">Make sure you check out Settings to see what you can change!</p>
         <br>
         <div id="leftToolbar">
