--- a/snake.html
+++ b/snake.html
@@ -19,8 +19,7 @@
     </head>
     <body onload="loop()">
         <div id="navbarContainer"></div>
-        <br>
-        <h1 class="center">Snake</h1>
+        <h1 id="pageTitle">Snake</h1>
         <br>
 
 
