--- a/template.html
+++ b/template.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="navbarContainer"></div>
-    <h1>Template Title</h1>
+    <h1 id="pageTitle">Template Title</h1>
     <p>Template Text</p>
 </body>
 <script>
