--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="navbarContainer"></div>
     <div class="container">
-        <h1 class="alignCenter">Welcome</h1>
+        <h1 id="pageTitle">Welcome</h1>
         <h3>We are planning to create:</h3>
         <ul>
             <li>
