make homepage white

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="clickable.css">
+
+    <style>
+        body {
+            background-color: white;
+        }
+    </style>
 </head>
 
 <body>
